# pynoddy_exhumation

./: .gitignore  LICENSE  OnlineNIRB.py  POD.py  README.md  case_mcmc.py  case_mcmc_new.py  case_no_mcmc.py  default_configs.py  exh_average.py  exh_functions.py  exh_plotting.py  exh_processing.py  exh_scoring.py  exh_simulation.py  exhumation_block.py  exhumation_new.ipynb  model_selection.py  pyproject.toml  sensitivity.py  surrogate_gsa.py  sythetic_mcmc.py  test_Cioff.py  twofaults_translation.his
ClusterSubmission/: execute_exh_block.sh  execute_job.sh  execute_mcmc.sh  execute_mcmc_new.sh  execute_no_mcmc.sh  execute_synthetic.sh  submit.py  submit_exh_block.py  submit_mcmc.py  submit_mcmc_new.py  submit_no_mcmc.py  submit_scoring.py  submit_synthetic.py
ClusterSubmission/Sub/: .gitignore
core/: __init__.py  exh_functions.py  exh_processing.py
data/: ortner_samples.his
data/input_files/: Alps_KinematicModelAlpsFault1-4.joblib  TrainingsParametersKinematicModelAlpsFault1-4.npy  TrainingsParametersKinematicModelAlpsFault1-4_depth_rounded_unique.npy  ValidationParametersKinematicModelAlpsFault1-4.npy  all_params.npy  bregenz_data.csv  bregenz_exh.csv  bregenz_samples.his  bregenz_ver5.his  diff.npy  hist_initial.his  inputparams_00.npy  inputparams_100.npy  inputparams_200.npy  inputparams_300.npy  inputparams_400.npy  inputparams_500.npy  inputparams_600.npy  inputparams_700.npy  inputparams_800.npy  inputparams_900.npy  og_coords_100.npy  ortner_samples.his  (+68 more)
examples/: README.md  test_Cioff.py
hspace/: README.md
scripts/: __init__.py
(+43 files in other folders)
